<?xml version="1.0" encoding="utf-8"?>
<ScrollView  
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        xmlns:android="http://schemas.android.com/apk/res/android"
        >
 <LinearLayout
     android:id="@+id/Vehiclelawinfolayout" 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_margin="3dp"
     >
   <LinearLayout
    android:id="@+id/Vehiclelawinfolayoutsimple"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
 	>
 	<LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:orientation="horizontal"
      >
 		<TextView 
     	android:id="@+id/tvlawcode"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:text="@string/stvlawcode"
     	android:textSize="25sp"
     	android:textStyle="bold"
     	android:textColor="#000000"
     	/>
 		<EditText 
     	android:id="@+id/etlawcode"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:numeric="integer"
     	android:maxLength="5"
     	android:hint="@string/stvlawcode"
     	android:textColor="#000000"
     	android:layout_weight="1"
     	/>
 		<Button 
     	android:id ="@+id/btnlawcodequery"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:text="@string/query"
     	android:background="@drawable/btnclick_selector"
     	android:onClick="OnClicklawcodequery"
     	/>
 		</LinearLayout>
 		<LinearLayout 
      	android:layout_width="fill_parent"
      	android:layout_height="wrap_content"
      	android:layout_marginTop="5dp"
      	android:layout_weight="1"
      	>
      	<EditText
     		android:id="@+id/etlawinfo"
     		android:layout_width="fill_parent"
     		android:layout_height="140dp"
     		android:background="@drawable/borderfocus"
	 		android:scrollbars="vertical"
	 		android:scrollbarAlwaysDrawVerticalTrack="true" 
     		android:editable="false"
     		android:inputType="textMultiLine"
     		android:textColor="#000000"
     		/> 
  		</LinearLayout>
  </LinearLayout>
  <LinearLayout
    android:id="@+id/Vehiclelawinfolayoutforce"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/forcetype"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
     >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
      <TextView 
      android:id="@+id/tvalcohol"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/stvalcohollevel"
      android:textSize="20sp"
     android:textStyle="bold"
     android:textColor="#000000"
      />
  	<EditText
      android:id="@+id/etalocohol"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:textSize="20sp"
      android:textColor="#000000"
      android:background="@drawable/etfocuson_selector"
      android:layout_weight="1"
       />

  <TextView
      android:id="@+id/tvrulelimit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="20sp"
      android:text="@string/stvlimit"
      android:textStyle="bold"
      android:textColor="#000000"
      />
  <EditText
      android:id="@+id/etrulelimit"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:textSize="20sp"
      android:textColor="#000000"
      android:background="@drawable/etfocuson_selector"
      android:layout_weight="1"
      />
    </LinearLayout>
     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_margin="20dp"
         >
       <CheckBox 
      android:id="@+id/check1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/detainvehicle"
      android:textSize="20sp"
      android:textStyle="bold"
      android:textColor="#000000"
      android:background="@drawable/etfocuson_selector"
      android:layout_weight="1"
    
    	/>
    <CheckBox 
      android:id="@+id/check3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/detaindrivinglicence"
      android:textSize="20sp"
      android:textStyle="bold"
      android:textColor="#000000"
      android:background="@drawable/etfocuson_selector"
      android:layout_weight="1"
     
       />  
     </LinearLayout>
     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_margin="20dp">
         <CheckBox
        android:id="@+id/check2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/detainbicycle" 
        android:textColor="#000000"
        android:background="@drawable/etfocuson_selector"
        android:layout_weight="1"
        />
    <CheckBox 
      android:id="@+id/check6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/dragvehicle"
      android:textSize="20sp"
      android:textStyle="bold"
      android:textColor="#000000"
      android:background="@drawable/etfocuson_selector"
      android:layout_weight="1"
    	/> 
     </LinearLayout>
   </LinearLayout>  
</LinearLayout>
</ScrollView>