<?xml version="1.0" encoding="utf-8"?>
 <ScrollView 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        xmlns:android="http://schemas.android.com/apk/res/android"
        >
<LinearLayout
    android:id="@+id/Vehiclecarinfolayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:orientation="vertical" >

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        
     	>
        <TextView 
        android:id="@+id/tvroad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sbtnroad"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000000"/>
	<EditText 
	    android:id="@+id/etroadcode"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:hint="@string/sbtnroad"
	    android:numeric="integer"
	    android:maxLength="8"
	    android:textSize="20sp"
	    android:textColor="#000000"
	    android:layout_weight="1"
	    android:layout_marginLeft="5dp"
	    />
    </LinearLayout>
     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
    	android:layout_weight="1"
        >
        <EditText
	   android:id="@+id/etroadname"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:textSize="20sp"
	    android:hint="@string/sbtnroadname"
	    android:textColor="#000000"
	    android:background="@drawable/borderfocus"
	    
	    /> 
     </LinearLayout>
      <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
          <TextView 
	    android:id="@+id/tvcartype"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sbtncartype"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000000"
        />
	    <Spinner
        android:id="@+id/spcartype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/cartypearray"
        android:layout_marginLeft="5dp"
        />
      </LinearLayout>
       <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <TextView 
	    android:id="@+id/tvcarnumtype"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sbtncarnumtype"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000000"
        />
	   <Spinner
        android:id="@+id/spcarnumtype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/carnumtypearray"
        android:prompt="@string/sbtncarnumtype"
        android:layout_marginLeft="5dp"
        />
       </LinearLayout>
        <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
       >
            <TextView 
	    android:id="@+id/tvcarnum"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sbtncarnum"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000000"/>
	  <Spinner 
        android:id="@+id/spprovince_car"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:entries="@array/provincearray"
        android:prompt="@string/sbtncarnum"
        android:layout_marginLeft="5dp"
        />
	  <EditText 
	    android:id="@+id/etcarnum"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:textSize="20sp"
	    android:hint="@string/sbtncarnum"
	    android:textColor="#000000"
	    android:layout_weight="1"
	      />
        </LinearLayout>
         <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
	       android:id="@+id/tvtraffictype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stvtraffictype"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000"/>
	    <Spinner 
        android:id="@+id/sptraffictype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:entries="@array/traffictypearray"
        android:prompt="@string/stvtraffictype"
        android:layout_marginLeft="5dp"
        />
         </LinearLayout>
          <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
         <TextView 
	       android:id="@+id/tvcarstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stvcarstatus"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000"/> 
      <EditText 
            android:id="@+id/etcarstatusdis"
            android:layout_width="wrap_content"
	    	android:layout_height="80dp"
	    	android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/borderfocus"
            android:textColor="#000000"
            android:layout_marginLeft="5dp"
            />
          </LinearLayout> 
	   <LinearLayout 
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:orientation="horizontal"
		   android:gravity="right"
		   android:layout_margin="5dp"
		   
		   
	       >
	       <Button
          android:id="@+id/btncarstatusquery"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:text="@string/query"
          android:textSize="20sp"
          android:background="@drawable/btnclick_selector"
          android:onClick="OnClickCarquery"
          android:layout_margin="5dp"
          
          />
	   </LinearLayout>
 
</LinearLayout>
</ScrollView>