<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF" >
   <LinearLayout
       android:id="@+id/Vehiclebaseinfolayout"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_margin="3dp"
       android:orientation="vertical" >

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        >
      	<TextView
        android:id="@+id/tvpeopletype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peopletype"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000000"/>  
        <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
        android:id="@+id/sppeopletype"
        android:layout_alignBottom="@id/tvpeopletype"
        android:entries="@array/peopletypearray"
        android:prompt="@string/peopletype" 
        android:layout_marginLeft="5dp"
        />
    </LinearLayout>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="5dp">
        <TextView
        android:id="@+id/tvlicence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvlicence"
        android:textSize="25sp"
        android:textStyle="bold" 
        android:textColor="#000000"/>
        <Spinner
            android:id="@+id/spprovince"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:entries="@array/provincearray"
            android:prompt="@string/tvlicence"
            android:layout_marginLeft="5dp"
			/>
    <Spinner 
        android:id="@+id/spprovince1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
 
        />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"  
        android:layout_weight="1"
        android:layout_marginTop="5dp">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="                "
        android:textSize="25sp"
        android:textStyle="bold" 
        android:textColor="#000000"/>
         <EditText 
         android:id="@+id/etlicence"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:enabled="false"
         android:background="@drawable/etfocuson_selector"
         android:textSize="22sp"
         android:textColor="#000000"
         android:layout_weight="1"
         android:layout_marginLeft="5dp"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"  
        android:layout_weight="1"
        android:layout_marginTop="5dp">
       <TextView
        android:id="@+id/tvname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000000"/>
        <EditText
         android:id="@+id/etname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:hint="姓名" 
         android:textColor="#000000"
         android:textSize="22sp"
         android:background="@drawable/etfocuson_selector"
         android:layout_marginLeft="5dp"
		/> 
    </LinearLayout>
     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"  
        android:layout_weight="1"
        android:layout_marginTop="5dp">
         <TextView 
            android:id="@+id/tvphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000"
            />
          <EditText 
         android:id="@+id/etphone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:phoneNumber="true"
         android:maxLength="11"
         android:numeric="integer"
         android:textSize="22sp"
         android:textColor="#000000"      
         android:background="@drawable/etfocuson_selector"
         android:layout_weight="1"
         android:layout_marginLeft="5dp"
         />
     </LinearLayout>
      <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_weight="1"
        android:layout_marginTop="5dp">
         <TextView
            android:id="@+id/tvarchivesnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/archivesnum"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000"
            /> 
            <EditText
         android:id="@+id/etarchivesnum"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:numeric="integer"
         android:maxLength="12"
         android:textSize="22sp"
         android:textColor="#000000"
         android:background="@drawable/etfocuson_selector"
         android:layout_weight="1"
         android:layout_marginLeft="5dp"
         />
      </LinearLayout>
       <LinearLayout 
          android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"  
        android:layout_weight="1"
        android:layout_marginTop="5dp">
         <TextView
            android:id="@+id/tvidentitycard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identitycard"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000"
            />
         <EditText
        android:id="@+id/etidentitycard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:numeric="integer"
         android:maxLength="18" 
         android:textSize="22sp"
         
         android:textColor="#000000"
         android:background="@drawable/etfocuson_selector"
         android:layout_weight="1"
         android:layout_marginLeft="5dp"
         />  
       </LinearLayout>
        <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="5dp">
            <TextView 
            android:id="@+id/tvdrivetype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvidentitycard"
            android:text="@string/drivetype"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000"
            />
           <EditText
         android:id="@+id/etdrivetype"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:capitalize="characters"
         android:inputType="textCapCharacters"
         android:textColor="#000000"
         android:textSize="22sp"
         
         android:background="@drawable/etfocuson_selector"
         android:layout_weight="1"
         android:layout_marginLeft="5dp"
         /> 
        </LinearLayout>
		<LinearLayout 
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="right"
          android:layout_marginTop="5dp"
          >
        <Button 
         android:id="@+id/btnbasequery"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/query"
         android:background="@drawable/btnclick_selector"
         android:onClick="OnClickbasequery"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="#000000"
         />  
      </LinearLayout>
  </LinearLayout>
</ScrollView>